test/corpus/full_tool_use.test
==================
Full thread of tool use
:language(harmony)
==================
<|start|>system<|message|>You are ChatGPT, a large language model trained by OpenAI.
Knowledge cutoff: 2024-06
Current date: 2025-06-28

Reasoning: high

# Valid channels: analysis, commentary, final. Channel must be included for every message.
Calls to these tools must go to the commentary channel: 'functions'.<|end|><|start|>developer<|message|># Instructions

Use a friendly tone.

# Tools

## functions

namespace functions {

// Gets the location of the user.
type get_location = () => any;

// Gets the current weather in the provided location.
type get_current_weather = (_: {
// The city and state, e.g. San Francisco, CA
location: string,
format?: "celsius" | "fahrenheit", // default: celsius
}) => any;

// Gets the current weather in the provided list of locations.
type get_multiple_weathers = (_: {
// List of city and state, e.g. ["San Francisco, CA", "New York, NY"]
locations: string[],
format?: "celsius" | "fahrenheit", // default: celsius
}) => any;

} // namespace functions<|end|><|start|>user<|message|>What is the weather like in SF?<|end|><|start|>assistant<|channel|>analysis<|message|>Need to use function get_current_weather.<|end|><|start|>assistant<|channel|>commentary to=functions.get_current_weather <|constrain|>json<|message|>{"location":"San Francisco"}<|call|><|start|>functions.get_current_weather to=assistant<|channel|>commentary<|message|>{"sunny": true, "temperature": 20}<|end|><|start|>assistant<|channel|>final<|message|>It's sunny, and nice at 20°C (68°F).<|end|>
---
(source_file
  (message
     (start_token)
     header: (header_system)
     (message_token)
     contents: (text)
     (end_token)
  )
  (message
     (start_token)
     header: (header_developer)
     (message_token)
     contents: (text)
     (end_token)
  )
  (message
     (start_token)
     header: (header_user)
     (message_token)
     contents: (text)
     (end_token)
  )
  (message
     (start_token)
     header: (header_assistant_analysis
        (channel_token)
     )
     (message_token)
     contents: (text)
     (end_token)
  )
  (message
     (start_token)
     header: (header_assistant_commentary
        (channel_token)
        function_name: (function_name)
        (constrain_token)
        format: (text)
     )
     (message_token)
     contents: (text)
     (end_token)
  )
  (message
     (start_token)
     header: (header_tool_result
         function_name: (function_name)
         (recipient_assistant)
         (channel_token)
     )
     (message_token)
     contents: (text)
     (end_token)
  )
  (message
     (start_token)
     header: (header_assistant_final
        (channel_token)
     )
     (message_token)
     contents: (text)
     (end_token)
  )
  )
