test/corpus/standalone/assistant_final.test
==================
assistant final message with <|return|> (decode only, inference time stop token)
:language(harmony)
==================
<|start|>assistant<|channel|>final<|message|>2 + 2 = 4.<|return|>
---
(source_file
    (message
      (start_token)
      header: (header_assistant_final
        (channel_token)
      )
      (message_token)
      contents: (text)
      (return_token)))
