test/corpus/standalone/developer_message.test
==================
developer message
:language(harmony)
==================
<|start|>developer<|message|># Instructions

Use a friendly tone.

# Tools

## functions

namespace functions {

// Gets the location of the user.
type get_location = () => any;

// Gets the current weather in the provided location.
type get_current_weather = (_: {
// The city and state, e.g. San Francisco, CA
location: string,
format?: "celsius" | "fahrenheit", // default: celsius
}) => any;

// Gets the current weather in the provided list of locations.
type get_multiple_weathers = (_: {
// List of city and state, e.g. ["San Francisco, CA", "New York, NY"]
locations: string[],
format?: "celsius" | "fahrenheit", // default: celsius
}) => any;

} // namespace functions<|end|>
---
(source_file
  (message
    (start_token)
    header: (header_developer)
    (message_token)
    contents: (text)
    (end_token)))

; BTW, :InspectTree in the (input) node is a great way to check expectations!
