test/corpus/standalone/tool_call_preamble.test
==================|||
assistant commentary - tool call w/ preamble
:language(harmony)
==================|||
<|start|>assistant<|channel|>commentary<|message|>**Action plan**:
1. Generate an HTML file
2. Generate a JavaScript for the Node.js server
3. Start the server
---
Will start executing the plan step by step<|end|>
---|||
(source_file
  (message
    (start_token)
    header: (header_assistant_commentary
      (channel_token))
    (message_token)
    contents: (text)
    (end_token)))
