test/corpus/standalone/user_message.test
==================
user message
:language(harmony)
==================
<|start|>user<|message|>What time is it?<|end|>
---
(source_file
  (message
    (start_token)
    header: (header_user)
    (message_token)
    contents: (text)
    (end_token)))

; BTW, :InspectTree in the (input) node is a great way to check expectations!
